# project

./: .gitignore  detecting.ipynb  extracting.py  labeling.ipynb  labeling.py  live_testing.ipynb  main.py  pyproject.toml  video2frame.ipynb
